Closed Bug 1884737 Opened 1 year ago Closed 11 months ago

Ensure CanvasChild::ReturnDataSurfaceShmem is threadsafe

Categories

(Core :: Graphics: Canvas2D, defect, P3)

defect

Tracking

()

RESOLVED FIXED
126 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox123 --- unaffected
firefox124 --- unaffected
firefox125 --- fixed
firefox126 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Set release status flags based on info from the regressing bug 1855742

Set release status flags based on info from the regressing bug 1855742

Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/27ed8d34323f Ensure CanvasChild::ReturnDataSurfaceShmem is threadsafe. r=lsalzman
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch

The patch landed in nightly and beta is affected.
:aosmond, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox125 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(aosmond)

Comment on attachment 9390594 [details]
Bug 1884737 - Ensure CanvasChild::ReturnDataSurfaceShmem is threadsafe.

Beta/Release Uplift Approval Request

  • User impact if declined: Race condition that can cause extra unnecessary copies
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just a small refactor to make it threadsafe no matter what thread the shmem is released on
  • String changes made/needed:
  • Is Android affected?: Yes
Flags: needinfo?(aosmond)
Attachment #9390594 - Flags: approval-mozilla-beta?

Comment on attachment 9390594 [details]
Bug 1884737 - Ensure CanvasChild::ReturnDataSurfaceShmem is threadsafe.

Approved for 125.0b4.

Attachment #9390594 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: