Bug 1884737 - Ensure CanvasChild::ReturnDataSurfaceShmem is threadsafe. r=lsalzman a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D204282